trivial code organise.